src/components/styles/main.scss
/* Base styles */

@font-face {
  font-family: 'Open Sans';
  src: url("https://fonts.googleapis.com/css?family=Montserrat:300");
}

@font-face {
  font-family: "droid-serif";
  src: url("droid-Serif.woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "droid-sans-mono";
  src: url("droid-sans-mono.woff");
  font-weight: normal;
  font-style: normal;
}

:root {
  --base: #282a36;
  --base-dark: #1d1f27;
  --base-light: #333545;
  --burgundy: #590016;
  --burgundy-light: #fff6f8;
  --burgundy-dark: #400010;
  --teal: #006767;
  --teal-light: #ddffff;
  --teal-dark: #004e4e;
  --color: #fffff8;

  /* --display: "Comfortaa", cursive; */
  --sans-serif: "droid-sans-mono", sans-serif;
  --serif: "droid-Serif", serif;
  --sans-serif2: "Montserrat", sans-serif;
}

body {
  height: 100vh;
  margin: 0;
  font-family: var(--sans-serif);
  background-color: #f2f2f2;
  overflow: hidden;
  padding: 1px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--serif);
}

.base {
  width: 100%;
  transition: all 0.2s ease;
  display: flex;
  align-items: center;
}


/* Navigation styles class=navigation */


.mainNav {
  margin-top: 50px;
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  width: 40%;
  max-width: 50%;
  flex-wrap: wrap;

  .navButton {
    width: 150px;
    height: 80px;
    color: var(--base-dark);
    margin: 10px;
  }

}

.neo-white {
  position: relative;
  background-color: #f2f2f2;
  border-radius: 20px;
  box-shadow: 0px -6px 10px #ffffff, 0px 4px 15px #00000026;
  cursor: pointer;
  text-decoration: none;
  display: flex;
  justify-content: center;
  align-items: center;
  text-transform: uppercase;
  transition: all 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
  box-shadow: 0px -6px 10px rgba(255, 255, 255, 1),
    0px 4px 15px rgba(0, 0, 0, 0.15);

  &:after {
    // buttons pseudo element
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    border-radius: 20px;
    z-index: 2;
  }

  &:active {
    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.02);

    &:after {
      box-shadow: inset 0px -2px 5px #ffffff,
        inset 0px 2px 5px #00000026;
    }
  }


}


/* Head Hero styles 
 * classes
 * head-hero
 * hero-content
 * hero-title
 * hero-sub
 * hero-desc
  */

.head-hero {
  flex-direction: column;
  --height: 100vh;
  height: var(--height);
  color: var(--burgundy);
}


/* About styles 
 * classes
 * about
 * content
 * */

.about {
  flex-direction: column;
  height: 100vh;
  font-family: var(--sans-serif2);
  padding: 20px;

  p {
    width: 60%;
    text-align: justify;
  }

  img {
    border-radius: 50%;
    width: calc(100px + 10vw);
  }

  .socialbox {
    display: flex;
    justify-content: center;
    width: 30%;

    * {
      padding: 0 10px;
      border-right: 1px solid black;
    }

    & p:last-child {
      border: none;
    }
  }
}


.homeImage {
  height: 60vw;
  max-height: 400px;
  margin-top: 5%;
}

// Media queries section below 



@media only screen and (max-width:742px) {

  /* CSS rules here */
  .mainNav {
    overflow-y: scroll;
    margin-top: 10px;
    width: 50%;
    padding: 0 10px;

  }
}

